# ML-crypto-arbitrage

./: .gitattributes  README.md  README_tmp.html
ML_service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.cuda.yaml  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
ML_service/config/: models.yaml  service.yaml  strategies.yaml
ML_service/market_replay_data/raw_last_3d/: l2_raw.parquet  manifest.json  ohlcv_raw.parquet
ML_service/models/: README.md
ML_service/models/q35_perp/: manifest.example.json  manifest.json  model.joblib
ML_service/models/q35_spot/: manifest.json  model.joblib
ML_service/models/rl_agent/: evaluation_summary.json  feature_scaler.joblib  lstm_r2d2.pt  manifest.example.json  manifest.json
ML_service/models/transformer/: category_config.json  dataset_contract.json  feature_scaler.npz  manifest.example.json  manifest.json  model_config.json  multiscale_transformer_best.pt
ML_service/scripts/: benchmark_transformer_latency.py  package_q35_bundle.py  package_rl_r2d2_bundle.py  package_transformer_bundle.py
ML_service/src/ml_service/: __init__.py  config.py  context.py  coordinator.py  device.py  main.py  metrics.py  monitor.py  ohlcv.py  schemas.py
ML_service/tests/: conftest.py  test_device.py  test_features.py  test_l2_batch.py  test_market_state.py  test_memory_repository.py  test_monitor.py  test_ohlcv_batch.py  test_ohlcv_provider.py  test_pair_contract.py  test_paper_engine.py  test_q35_integration.py  test_rl_contract.py
market_simulator/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
market_simulator/src/market_simulator/: __init__.py  config.py  main.py  prepare.py  (+1 more)
market_simulator/tests/: test_prepare.py  test_replay.py
(+20 files in other folders)
