[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arb-market-simulator"
version = "0.1.0"
description = "Deterministic L2 market replay for the arbitrage ML service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "duckdb>=1.2,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pyarrow>=18,<22",
    "pydantic>=2.9,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
